--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     :root{
-      --fs: 2.8vw;     /* scale of the cassette */
-      --lh: 1.08;      /* line-height: lower = more rectangular */
-      --input-top: 69%;/* position the input vertically (was 73%) */
-    }
-    @media (max-width: 700px){
-      :root{ --fs: 5.2vw; --lh: 1.02; --input-top: 68%; }
-    }
+  --fs: 2.8vw;     /* scale of the cassette */
+  --lh: 1.08;      /* line-height: lower = more rectangular */
+  --input-top: 66%;/* ← était 69%, on remonte */
+}
+@media (max-width: 700px){
+  :root{ --fs: 5.2vw; --lh: 1.02; --input-top: 65%; }
+}
     body {
       background: #000;
       color: #fff;
